--- a/src/styles/components/_products.scss
+++ b/src/styles/components/_products.scss
@@ -50,12 +50,12 @@
     }
   }
 
-  &__filters {
-    display: none;
-    @include media-tablet {
-      display: flex;
-    }
-  }
+  // &__filters {
+  //   display: none;
+  //   @include media-tablet {
+  //     display: flex;
+  //   }
+  // }
 
   &__main {
     width: 100%;
