--- a/src/styles/components/_filters.scss
+++ b/src/styles/components/_filters.scss
@@ -10,9 +10,12 @@
   align-items: center;
   width: 100%;
   height: calc(100% - 116px);
-  transform: translateY(100%);
+  transform: translateY(110%);
   border-radius: 24px 24px 0 0;
   background-color: $background-main;
+  box-shadow:
+    2px 2px 8px $ui-main,
+    -2px -2px 8px $ui-main;
   transition: transform $filters;
 
   &_opened {
