refactor: take out wrapper-background

--- a/src/pug-components/hero.pug
+++ b/src/pug-components/hero.pug
@@ -1,7 +1,7 @@
 include ./breadcrumbs
 
-mixin hero
-  section.hero
+mixin hero(className)
+  section(class=['hero', className])
     +breadcrumbs('hero__breadcrumbs')
     h1.hero__title Краски
     p.hero__subtitle Идеально подходят для стен и других поверхностей. Найди свой идеальный цвет!
