--- a/src/styles/components/_wrapper-background.scss
+++ b/src/styles/components/_wrapper-background.scss
@@ -11,8 +11,8 @@
   background-color: rgba($color: #000000, $alpha: 0.8);
   opacity: 0;
   transition:
-    visibility $hover,
-    opacity $hover linear;
+    visibility $wrapper,
+    opacity $wrapper linear;
   &_opened {
     visibility: visible;
     opacity: 1;
