--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,7 @@ include ./pug-components/navigation
 include ./pug-components/ui-icons
 include ./pug-components/hero
 include ./pug-components/products
+include ./pug-components/cart
 
 doctype html
 html(lang='ru')
@@ -26,5 +27,6 @@ html(lang='ru')
     main
       +hero
       +products
+      +cart
 
   script(src='./index.js', defer='defer') 
