--- a/src/pug-components/ui-icons.pug
+++ b/src/pug-components/ui-icons.pug
@@ -1,5 +1,5 @@
-include ./link-basket.pug
-include ./link-icon.pug
+include ./link-basket
+include ./link-icon
 
 mixin ui-icons(className)
   ul(class=['ui-icons', className])
