--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -11,8 +11,10 @@
 @use './navigation';
 @use './ui-icons';
 @use './wrapper-background';
+@use './cart-product';
 
 @use './header';
 @use './hero';
 @use './products';
 @use './modal-sort';
+@use './cart';
