fix: delete extra button-link

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 include ./pug-components/button-burger
 include ./pug-components/card
 include ./pug-components/header
-include ./pug-components/link-basket
+include ./pug-components/button-basket
 include ./pug-components/link-callback-tel
 include ./pug-components/logo
 include ./pug-components/navigation
@@ -23,7 +23,7 @@ html(lang='ru')
       +navigation('header__navigation')
       +link-callback-tel('header__link-callback-tel')
       +ui-icons('header__ui-icons')
-      +link-basket('header__link-basket')
+      +button-basket('header__button-basket')
     main
       +hero
       +products
