--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -4,7 +4,7 @@
 @use './card';
 @use './filter-checkbox';
 @use './filters';
-@use './link-basket';
+@use './button-basket';
 @use './link-callback-tel';
 @use './link-icon';
 @use './logo';
