--- a/src/styles/components/_filters.scss
+++ b/src/styles/components/_filters.scss
@@ -14,8 +14,8 @@
   border-radius: 24px 24px 0 0;
   background-color: $background-main;
   box-shadow:
-    2px 2px 8px $text-main,
-    -2px -2px 8px $text-main;
+    2px 2px 8px $ui-main,
+    -2px -2px 8px $ui-main;
   transition: transform $filters;
 
   &_opened {
