--- a/src/pug-components/cart.pug
+++ b/src/pug-components/cart.pug
@@ -9,7 +9,7 @@ mixin cart(className)
       .cart__counter
         span.cart__counter-value 4
         button.cart__clear-all очистить список
-      +cart-product 
+      //- +cart-product 
 
       .cart__footer
         .cart__total
