--- a/src/pug-components/card.pug
+++ b/src/pug-components/card.pug
@@ -1,7 +1,7 @@
-mixin card(image, alt, desc, price, className)
+mixin card(src='', title='', price='', className)
   div(class=['card', className])
-    img.card__image(src=image, alt=alt)
-    p.card__description #{ desc }
+    img.card__image(src=src, alt=title)
+    p.card__description #{ title }
     .card__footer
       span.card__price #{ price }
       button.card__button
