--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,7 +1,7 @@
 @use './breadcrumbs';
+@use './template-card';
 @use './button-burger';
 @use './button-filters';
-@use './card';
 @use './filter-checkbox';
 @use './filters';
 @use './button-basket';
