refactor: rename cart-product to template-cart-product

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -11,7 +11,7 @@
 @use './navigation';
 @use './ui-icons';
 @use './wrapper-background';
-@use './cart-product';
+@use './template-cart-product';
 
 @use './header';
 @use './hero';
