--- a/src/styles/components/_template-cart-product.scss
+++ b/src/styles/components/_template-cart-product.scss
@@ -1,6 +1,6 @@
 @use '../utils' as *;
 
-.cart-product {
+.template-cart-product {
   display: flex;
   flex-direction: column;
   border-top: 1px solid rgba($color: #000, $alpha: 0.1);
