--- a/src/styles/components/_basket-card.scss
+++ b/src/styles/components/_basket-card.scss
@@ -1,6 +1,6 @@
 @use '../utils' as *;
 
-.template-cart-product {
+.basket-card {
   display: flex;
   flex-direction: column;
   border-top: 1px solid rgba($color: #000, $alpha: 0.1);
