--- a/src/pug-components/basket-card.pug
+++ b/src/pug-components/basket-card.pug
@@ -10,3 +10,4 @@ mixin basket-card(src='', price='', id='', counter='', className)
       span.basket-card__counter #{ counter }
       button.basket-card__plus
       button.basket-card__delete
+      button.basket-card__repeat
