--- a/src/styles/components/_basket-card.scss
+++ b/src/styles/components/_basket-card.scss
@@ -20,13 +20,14 @@
   }
 
   &__image {
+    display: flex;
     width: 96px;
     height: 96px;
     object-fit: contain;
     border-radius: 5px;
   }
 
-  &__-description {
+  &__description {
     max-width: 165px;
   }
 
@@ -71,6 +72,7 @@
   &__counter {
     width: 47px;
     text-align: center;
+    user-select: none;
     @include font-regular(16px);
   }
 
@@ -87,6 +89,49 @@
     cursor: pointer;
     @include effect-hover-button;
     @include effect-focus-main;
+  }
+
+  &__repeat {
+    display: none;
+    position: relative;
+    width: 24px;
+    height: 24px;
+    margin-left: 37px;
+    border: none;
+    border-radius: 4px;
+    background-color: transparent;
+    cursor: pointer;
+    @include effect-hover-icon;
+    @include effect-hover-button;
+    @include effect-focus-main;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('./images/repeat-icon.svg') no-repeat center / contain;
+      content: '';
+      opacity: 1;
+    }
+    &:hover::before {
+      opacity: 0;
+    }
+
+    &::after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('./images/repeat-icon.svg') no-repeat center / contain;
+      content: '';
+      opacity: 0;
+    }
+    &:hover::after {
+      opacity: 1;
+    }
   }
 
   &__delete {
@@ -129,5 +174,31 @@
     &:hover::after {
       opacity: 1;
     }
+  }
+
+  &_deleted &__info {
+    opacity: 0.4;
+  }
+
+  &_deleted &__minus {
+    opacity: 0.4;
+    @include no-effects;
+  }
+
+  &_deleted &__counter {
+    opacity: 0.4;
+  }
+
+  &_deleted &__plus {
+    opacity: 0.4;
+    @include no-effects;
+  }
+
+  &_deleted &__repeat {
+    display: revert;
+  }
+
+  &_deleted &__delete {
+    display: none;
   }
 }
