--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -2,15 +2,42 @@
 
 .card {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 156px;
   height: 305px;
   border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
   border-radius: 10px;
   background-color: $background-main;
+  user-select: none;
   @include media-laptop-L {
     width: 278px;
     height: 393px;
+  }
+
+  &__counter {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: $ui-main;
+    opacity: 1;
+    transition: opacity $hover;
+    @include font-medium(12px, 0.06em);
+    @include media-laptop-L {
+      width: 40px;
+      height: 40px;
+      @include font-medium(16px, 0.06em);
+    }
+
+    &_disabled {
+      opacity: 0;
+    }
   }
 
   &__image {
