feat: add js for basketCounterValue

--- a/src/pug-components/basket.pug
+++ b/src/pug-components/basket.pug
@@ -5,10 +5,10 @@ mixin basket(className)
         span.basket__title Корзина
         button.basket__button-close
       .basket__counter
-        span.basket__counter-value 4
+        span.basket__counter-value 0 товаров
         button.basket__clear-all очистить список
 
-      .basket__cards-container  
+      .basket__cards-container
 
       .basket__footer
         .basket__total
