feat: add js for basketTotalPrice

--- a/src/pug-components/basket.pug
+++ b/src/pug-components/basket.pug
@@ -13,5 +13,5 @@ mixin basket(className)
       .basket__footer
         .basket__total
           span.basket__total-title Итого
-          span.basket__total-price 14 400
+          span.basket__total-price 0
         button.basket__submit Оформить заказ
