feat: add js for sort

--- a/src/pug-components/modal-sort.pug
+++ b/src/pug-components/modal-sort.pug
@@ -9,10 +9,10 @@ mixin modal-sort(className)
     .modal-sort__content
       ul.modal-sort__content-list
         li
-          button.modal-sort__content-button.modal-sort__content-button_active Сначала дорогие
+          button#buttonSortExpensive.modal-sort__content-button.modal-sort__content-button_active Сначала дорогие
         li
-          button.modal-sort__content-button Сначала недорогие
+          button#buttonSortInexpensive.modal-sort__content-button Сначала недорогие
         li
-          button.modal-sort__content-button Сначала популярные
+          button#buttonSortPopular.modal-sort__content-button Сначала популярные
         li
-          button.modal-sort__content-button Сначала новые
+          button#buttonSortNew.modal-sort__content-button Сначала новые
