--- a/src/index.pug
+++ b/src/index.pug
@@ -17,6 +17,7 @@ html(lang='ru')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Краски
+    link(rel='icon', href='./images/horse.svg')
   body
     +header
       +button-burger('header__button-burger')
