change text-color (bag ios)

--- a/src/styles/components/_basket.scss
+++ b/src/styles/components/_basket.scss
@@ -119,6 +119,7 @@
     border: none;
     border-radius: 4px;
     background-color: $ui-main;
+    color: $text-main;
     text-align: center;
     text-transform: uppercase;
     cursor: pointer;
