--- a/src/styles/components/_sort.scss
+++ b/src/styles/components/_sort.scss
@@ -14,6 +14,7 @@
   }
 
   &__button-text {
+    color: $text-main;
     text-transform: uppercase;
     @include font-medium(12px, 0.06em);
   }
@@ -59,6 +60,7 @@
     border: none;
     border-radius: 5px;
     background-color: $background-main;
+    color: $text-main;
     text-transform: uppercase;
     cursor: pointer;
     @include font-medium(12px, 0.06em);
