--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -31,7 +31,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 1920px;
-  min-height: 200vh; // чтобы не дергалось сильно при отсутствии карточек
+  min-height: 100vh;
   margin: 0 auto;
   background-color: $background-main;
   color: $text-main;
